--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,4 +8,8 @@ appTitle=Invoices List
 #YDES: Application description
 appDescription=Invoices List
 #XTIT: Main view title
-title=Invoices List
+title=Invoices
+
+selectionScreen=Selection Screen
+shipName=Ship Name
+country=Country
